--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,16 @@
 @charset "UTF-8"
-.listdemoBasicUsage md-divider
-	margin-top: 10px
-	margin-bottom: 0
+.section
+	width: 100%
+	.wr
+		margin: auto
+		max-width: 1020px
+		.title
+	&.registration
+		.wr
+			max-width: 600px
+	&.login
+		.wr
+			max-width: 300px
+	&.profile
+		.wr
+			max-width: 600px
