--- a/app/js-es6/component/LoginPage/template.html
+++ b/app/js-es6/component/LoginPage/template.html
@@ -1,6 +1,6 @@
 <section class="section login">
 	<div class="wr">
 		<h1 class="title">Вход</h1>
-		<login-form />
+		<login-form user="$ctrl.user" submit="$ctrl.submit()" />
 	</div>
 </section>
