--- a/app/js-es6/component/ProfilePage/template.html
+++ b/app/js-es6/component/ProfilePage/template.html
@@ -1,4 +1,4 @@
-<section class="section profile" ng-controller="ProfileForm as $ctrl" >
+<section class="section profile">
 	<div class="wr">
 		<h1 class="title">Пользователь</h1>
 		<user-form user="$ctrl.user" is-disabled="$ctrl.isDisabled" btn="$ctrl.btn" submit="$ctrl.submit()" />
