--- a/app/js-es6/component/RegistrationPage/template.html
+++ b/app/js-es6/component/RegistrationPage/template.html
@@ -1,4 +1,4 @@
-<section class="section registration" ng-controller="RegistrationForm as $ctrl">
+<section class="section registration">
 	<div class="wr">
 		<h1 class="title">Регистрация</h1>
 		<user-form user="$ctrl.user" is-disabled="$ctrl.isDisabled" btn="$ctrl.btn" submit="$ctrl.submit()" />
